# Genealogy-Tree

./: .pre-commit-config.yaml  Makefile  README.md  TODOs  pyproject.toml
app/: bootstrap.py  commands.py  config.py  database.py  db.py  main.py  main_cqrs.py  models.py
app/api/: people.py  relationships.py  request_schemas.py
app/application/: bus.py  command.py  command_handler.py  command_handlers.py  commands.py  exceptions.py  generics.py  queries.py  query_handlers.py
app/cli/: main.py
app/core/: config.py
app/domain/: person.py
app/infrastructure/: repository.py
frontend/src/: App.tsx  person_node.module.css  person_node.tsx
frontend/src/api/: client.ts  people.ts  people.tsx  relationships.tsx
frontend/src/components/: PersonForm.tsx  PersonList.tsx
tests/: conftest.py  fakes.py  test_api.py  test_bus.py  test_command_handler.py  test_commands.py  test_people.py  test_query_handler.py  test_relationships.py  test_repository.py
tests/api/: test_add_parent_child.py  test_create_person.py  test_delete_person.py  test_get_all_people.py  test_get_person.py
tests/contracts/: repository_contract.py  test_person_repository.py  test_person_repository_fake.py
